<resources>
    <string name="app_name">Orthanc Manager</string>
    <string name="titleAddServer">Add Server</string>
    <string name="titleSettings">Server Settings</string>
    <string name="titleSettingsForm">Settings</string>
    <string name="titleAddNewServer">Add New Server</string>
    <string name="ipadressNewServer">IP Address</string>
    <string name="loginUserNewServer">Login</string>
    <string name="passwordNewServer">Password</string>
    <string name="savebutton">Save</string>
    <string name="canselbutton">Cansel</string>
    <string name="portNewServer">Port</string>
    <string name="checkConnect">Check connection</string>
    <string name="pathToJson">Path to orthanc.json</string>
    <string name="nameNewServer">Name</string>
    <string name="failureName">Name field is empty!</string>
    <string name="failureIP">IP field is empty!</string>
    <string name="failurePORT">Port field is empty!</string>
    <string name="confirmdeletion">Confirm deletion</string>
    <string name="deleteserver">Delete</string>
    <string name="areyousure">Are you sure you want to delete this?</string>
    <string name="didnotconnect">Not yet read</string>
    <string name="connectionerror">Connection error!</string>
    <string name="sucsess">SUCSESS</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="nameofserver">имя сервера</string>
    <string name="ipaddress">ipaddress</string>
    <string name="zero">0</string>
    <string name="itemmenu">Item menu</string>
    <string name="disksize">Disk size</string>
    <string name="countinstances">Instances:</string>
    <string name="countpatients">Patients:</string>
    <string name="countseries">Series:</string>
    <string name="countstudies">Studies:</string>
    <string name="totalDiskSizeMB">SizeOnDisk(MB):</string>
    <string name="images">IMAGES</string>
    <string-array name="chooseOC">
        <item> <string name="chooseOChint">Choose OS</string> </item>
        <item>Linux</item>
        <item>Windows</item>
    </string-array>
    <string-array name="pathjson">
        <item>/etc/orthanc/</item>
        <item>C:\\Program Files\\Orthanc Server\\Configuration\\</item>
    </string-array>
    <string-array name="seachtype">
        <item>Patient name</item>
        <item>Patient ID</item>
    </string-array>
    <string-array name="Property">
        <item>Generic</item>
        <item>GenericNoWildcardInDates</item>
        <item>StoreScp</item>
        <item>ClearCanvas</item>
        <item>Dcm4Chee</item>
        <item>Vitrea</item>
        <item>GE</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage">Main</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="seach">SEACH</string>
    <string name="study">STUDY</string>
    <string name="patients">PATIENTS</string>
    <string name="general">GENERAL</string>
    <string name="http">HTTP</string>
    <string name="dicom">DICOM</string>
    <string name="NETWORK">NETWORK</string>
    <string name="advanced">ADVANCED</string>
    <string name="name">Name of server:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingnamesummary">The logical name of this instance of Orthanc. This one is displayed in Orthanc Explorer and at the URI \"/system\"</string>
    <string name="settingname">Server name</string>
    <string name="storagedirectory">Storage Directory</string>
    <string name="storagedirectorysum">Path to the directory that holds the heavyweight files (i.e. the raw DICOM instances). Backslashes must be either escaped by doubling them, or replaced by forward slashes "/"</string>
    <string name="indexdirectory">Index Directory</string>
    <string name="indexdirectorysum">Path to the directory that holds the SQLite index (if unset, the value of StorageDirectory is used). This index could be stored a RAM-drive or a SSD device for performance reasons</string>
    <string name="storagecompression">Storage Compression</string>
    <string name="storagecompressionsum">Enable the transparent compression of the DICOM instances</string>
    <string name="MaximumStorageSize">Maximum Storage Size</string>
    <string name="MaximumStorageSizesum">Maximum size of the storage in MB (a value of "0" indicates no limit on the storage size)</string>
    <string name="MaximumPatientCount">Maximum Patient Count</string>
    <string name="MaximumPatientCountsum">Maximum number of patients that can be stored at a given time in the storage (a value of \"0\" indicates no limit on the number of patients)</string>
    <string name="ConcurrentJobs">Concurrent Jobs</string>
    <string name="ConcurrentJobssum"><![CDATA[Maximum number of processing jobs that are simultaneously running at any given time. A value of \"0\" indicates to use all the available CPU logical cores. To emulate Orthanc <= 1.3.2, set this value to \"1\".]]></string>
    <string name="httpsetting">Configuration of the HTTP server</string>
    <string name="HttpServerEnabled">HTTP Server Enabled</string>
    <string name="HttpServerEnabledsum">Enable the HTTP server. If this parameter is set to "false", Orthanc acts as a pure DICOM server. The REST API and Orthanc Explorer will not be available</string>
    <string name="HttpPort">HTTP Port</string>
    <string name="HttpPortsum">HTTP port for the REST services and for the GUI</string>
    <string name="HttpDescribeErrors">HTTP Describe Errors</string>
    <string name="HttpDescribeErrorssum">When the following option is \"true\", if an error is encountered while calling the REST API, a JSON message describing the error is put in the HTTP answer. This feature can be disabled if the HTTP client does not properly handles such answers</string>
    <string name="HttpCompressionEnabled">HttpCompressionEnabled</string>
    <string name="HttpCompressionEnabledsum">Enable HTTP compression to improve network bandwidth utilization, at the expense of more computations on the server. Orthanc supports the \"gzip\" and \"deflate\" HTTP encodings</string>
    <string name="dicomconfig">Configuration of the DICOM server</string>
    <string name="DicomServerEnabled">DICOM Server Enabled</string>
    <string name="DicomServerEnabledsum">Enable the DICOM server. If this parameter is set to "false", Orthanc acts as a pure REST server. It will not be possible to receive files or to do query/retrieve through the DICOM protocol.</string>
    <string name="DicomAet">DICOM AET</string>
    <string name="DicomAetsum">The DICOM Application Entity Title</string>
    <string name="DicomCheckCalledAet">DICOM Check Called Aet</string>
    <string name="DicomCheckCalledAetsum">Check whether the called AET corresponds to the AET of Orthanc during an incoming DICOM SCU request</string>
    <string name="DicomPort">DICOM Port</string>
    <string name="DicomPortsum">DICOM Port</string>
    <string name="DefaultEncoding">Default Encoding</string>
    <string name="DefaultEncodingsum">The default encoding that is assumed for DICOM files without \"SpecificCharacterSet\" DICOM tag, and that is used when answering C-Find requests (including worklists). The allowed values are \"Ascii\", \"Utf8\", \"Latin1\", \"Latin2\", \"Latin3\", \"Latin4\", \"Latin5\", \"Cyrillic\", \"Windows1251\", \"Arabic\", \"Greek\", \"Hebrew\", \"Thai\", \"Japanese\", and \"Chinese\"</string>
    <string name="DeflatedTransfer">Deflated Transfer</string>
    <string name="TransferSyntax">The transfer syntaxe</string>
    <string name="TransferSyntaxsum">The transfer syntaxes that are accepted by Orthanc C-Store SCP</string>
    <string name="JpegTransfer">Jpeg Transfer</string>
    <string name="Jpeg2000Transfer">"Jpeg2000 Transfer "</string>
    <string name="JpegLosslessTransfer">Jpeg Lossless Transfer</string>
    <string name="JpipTransferSyntaxAccepted">Jpip Transfer</string>
    <string name="Mpeg2Transfer">Mpeg2 Transfer</string>
    <string name="RleTransfer">Rle Transfer</string>
    <string name="UnknownSopClassAccepted">Unknown Sop Class Accepted</string>
    <string name="UnknownSopClassAcceptedsum">Whether Orthanc accepts to act as C-Store SCP for unknown storage SOP classes (aka. \"promiscuous mode\")</string>
    <string name="DicomScpTimeout">DICOM Scp Timeout</string>
    <string name="DicomScpTimeoutsum">Set the timeout (in seconds) after which the DICOM associations are closed by the Orthanc SCP (server) if no further DIMSE command is received from the SCU (client)</string>
    <string name="Securityhttp">Security-related options for the HTTP server</string>
    <string name="RegisteredUsers">Registered Users</string>
    <string name="RegisteredUserssum">The list of the registered users. Because Orthanc uses HTTP Basic Authentication, the passwords are stored as plain text</string>
    <string name="RemoteAccessAllowedsum">Whether remote hosts can connect to the HTTP server</string>
    <string name="RemoteAccessAllowed">Remote Access Allowed</string>
    <string name="SslEnabledsum">Whether or not SSL is enabled</string>
    <string name="SslEnabled">SSL Enabled</string>
    <string name="SslCertificate">SSL Certificate</string>
    <string name="SslCertificatesum">Path to the SSL certificate in the PEM format (meaningful only if SSL is enabled)</string>
    <string name="AuthenticationEnabled">Authentication Enabled</string>
    <string name="AuthenticationEnabledsum">Whether or not the password protection is enabled</string>
    <string name="Networktopology">Network topology</string>
    <string name="DicomModalitiesInDatabase">DICOM Modalities In Database</string>
    <string name="DicomModalitiesInDatabasesum">Whether to store the DICOM modalities in the Orthanc database instead of in this configuration file (new in Orthanc 1.5.0)</string>
    <string name="DicomAlwaysAllowEcho">DICOM Always Allow Echo</string>
    <string name="DicomAlwaysAllowEchosum">Whether the Orthanc SCP allows incoming C-Echo requests, even from SCU modalities it does not know about (i.e. that are not listed in the \"DicomModalities\" option above). Orthanc 1.3.0    is the only version to behave as if this argument was set to \"false\"</string>
    <string name="DicomAlwaysAllowStore">DICOM Always Allow Store</string>
    <string name="DicomAlwaysAllowStoresum">Whether the Orthanc SCP allows incoming C-Store requests, even from SCU modalities it does not know about (i.e. that are not listed in the \"DicomModalities\" option above)</string>
    <string name="DicomCheckModalityHost">DICOM Check Modality Host</string>
    <string name="DicomCheckModalityHostsum">Whether Orthanc checks the IP/hostname address of the remote modality initiating a DICOM connection (as listed in the \"DicomModalities\" option above). If this option is set to \"false\", Orthanc only checks the AET of the remote modality</string>
    <string name="DicomScuTimeout">DICOM Scu Timeout</string>
    <string name="ipmodalities">IP adress</string>
    <string name="portmodalities">PORT</string>
    <string name="todo">TODO</string>
    <string name="zpt">,</string>
    <string name="skbclose">]</string>
    <string name="skobkastart">[</string>
</resources>