<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/DeflatedTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/DeflatedTransfer" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/JpegTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/JpegTransfer" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/Jpeg2000Transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Jpeg2000Transfer" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/JpegLosslessTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/JpegLosslessTransfer" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/JpipTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/JpipTransferSyntaxAccepted" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/Mpeg2Transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Mpeg2Transfer" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/RleTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/RleTransfer" />

</LinearLayout>