<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPeer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#C9CBCE"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/peerURL"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="15"
                        android:gravity="center"
                        app:autoSizeTextType="none" />

                    <ImageView
                        android:id="@+id/deletePeer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_clear_24dp"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0"
                        android:text="@string/skobkastart" />

                    <TextView
                        android:id="@+id/peerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/zpt" />

                    <TextView
                        android:id="@+id/peerLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:text="@string/ipmodalities"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/zpt" />

                    <TextView
                        android:id="@+id/peerPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:text="@string/portmodalities"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0"
                        android:text="@string/skbclose" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
